# graph-v-rag

./: .env.example  .gitignore  DESIGN.md  README.md  USECASES.md  docker-compose.yml  pyproject.toml
data/: domain_schema.yaml  eval_questions.json
graph_vlm_rag/: __init__.py  __main__.py  chunker.py  config.py  cypher_generator.py  docling.py  eval.py  extract.py  eye.py  ingest.py  neo4j_store.py  qdrant_store.py  query.py  vision_enrich.py
scripts/: run_demo.sh
src/graph_vlm_rag/: __main__.py
src/graph_vlm_rag/cli/: ingest.py  query.py
src/graph_vlm_rag/ingestion/: docling.py  vision_enrich.py
src/graph_vlm_rag/reasoning/: cypher_generator.py  cypher_safety.py  extract.py
src/graph_vlm_rag/storage/: chunker.py  neo4j_store.py  parent_store.py  qdrant_store.py
src/graph_vlm_rag/utils/: types.py
tests/: test_config.py
