[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graph_vlm_rag"
version = "0.1.0"
description = "Multi-Modal Hybrid GraphRAG pipeline with Eye/Memory/Brain architecture"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{name = "Aakash Raghav"}]

dependencies = [
    # HTTP clients
    "httpx>=0.27",
    "requests>=2.31",

    # Vector + Graph stores
    "neo4j>=5.17",
    "qdrant-client>=1.7",

    # LLM orchestration
    "dspy>=2.5",

    # Text processing
    "langchain-text-splitters>=0.2",
    "fastembed>=0.3",
    "pypdf>=4.0",

    # Configuration
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
    "mypy>=1.8",
]

[project.scripts]
graph_vlm_rag = "graph_vlm_rag.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]